--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
-APP_NAME=Laravel
+APP_NAME=Appsolve
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:bkUdFVyWHHcC6fUORugPbyU69ox1WPROjRXgSMB1Byg=
 APP_DEBUG=true
 APP_URL=http://localhost
 
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
+DB_DATABASE=appsolve
 DB_USERNAME=root
-DB_PASSWORD=
+DB_PASSWORD=password
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
