--- a/package.json
+++ b/package.json
@@ -7,35 +7,34 @@
         "watch-poll": "npm run watch -- --watch-poll",
         "hot": "cross-env NODE_ENV=development node_modules/webpack-dev-server/bin/webpack-dev-server.js --inline --hot --disable-host-check --config=node_modules/laravel-mix/setup/webpack.config.js",
         "prod": "npm run production",
-        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+        "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+        "heroku-postbuild": "npm run prod"
     },
     "devDependencies": {
         "axios": "^0.19",
         "bootstrap": "^4.0.0",
+        "case-sensitive-paths-webpack-plugin": "^2.3.0",
         "cross-env": "^7.0",
+        "deepmerge": "^4.2.2",
+        "fibers": "^5.0.0",
         "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.13",
+        "lodash": "^4.17.19",
         "popper.js": "^1.12",
         "resolve-url-loader": "^2.3.1",
-        "sass": "^1.20.1",
-        "sass-loader": "^8.0.0",
+        "sass": "^1.27.0",
+        "sass-loader": "^8.0.2",
         "vue": "^2.5.17",
         "vue-template-compiler": "^2.6.10"
     },
     "dependencies": {
-        "@fortawesome/fontawesome-free": "^5.14.0",
-        "@fortawesome/fontawesome-svg-core": "^1.2.30",
-        "@fortawesome/free-solid-svg-icons": "^5.14.0",
-        "@fortawesome/vue-fontawesome": "^0.1.10",
-        "laravel-vue-pagination": "^2.3.1",
-        "pdfvuer": "^1.7.1",
-        "v-form": "^2.3.5",
-        "vsf-payment-paypal": "^1.0.1",
-        "vue-moment": "^4.1.0",
-        "vue-resource": "^1.5.1",
-        "vue-router": "^3.3.4",
-        "vue-sweetalert2": "^3.0.6",
+        "@fortawesome/fontawesome-free": "^5.15.1",
+        "tiptap": "^1.30.0",
+        "tiptap-extensions": "^1.33.2",
+        "vue-router": "^3.4.7",
+        "vue-sweetalert2": "^4.1.1",
+        "vuetify": "^2.3.14",
+        "vuetify-loader": "^1.6.0",
         "vuex": "^3.5.1"
     }
 }
